--- a/debian/control
+++ b/debian/control
@@ -3,14 +3,13 @@ Section: utils
 Priority: optional
 Maintainer: Debian Bluetooth Maintainers <team+pkg-bluetooth@tracker.debian.org>
 Uploaders: Nobuhiro Iwamatsu <iwamatsu@debian.org>
-Build-Depends: debhelper-compat (= 13),
+Build-Depends: debhelper-compat (= 12),
                libasound2-dev,
                libbluetooth-dev (>= 5.0),
                libdbus-1-dev (>= 1.6),
                libglib2.0-dev (>= 2.30),
                libsbc-dev (>= 1.2),
-               libldacbt-enc-dev (>= 2.0.0),
-               libldacbt-abr-dev (>= 2.0.0),
+               libfdk-aac-dev,
                pandoc
 Standards-Version: 4.5.1
 Homepage: https://github.com/Arkq/bluez-alsa
