--- a/debian/control
+++ b/debian/control
@@ -9,9 +9,8 @@ Build-Depends: debhelper-compat (= 13),
                libdbus-1-dev (>= 1.6),
                libglib2.0-dev (>= 2.30),
                libsbc-dev (>= 1.2),
-               libldacbt-enc-dev (>= 2.0.0),
-               libldacbt-abr-dev (>= 2.0.0),
-               pandoc
+               libfdk-aac-dev,
+               python3-docutils
 Standards-Version: 4.5.1
 Homepage: https://github.com/Arkq/bluez-alsa
 Vcs-Git: https://salsa.debian.org/bluetooth-team/bluez-alsa.git
